--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <body>
   <div class="container">
     <form method="post" action="https://script.google.com/macros/s/AKfycbw8Bk5Ajtdg4aeiaA8pDORNlk4VhpfnP4tiRyViaZh_icWIynVMbhLWYJjTBrDFY4RB/exec" name="contact-form">
