--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <form method="post" action="https://script.google.com/macros/s/AKfycbw8Bk5Ajtdg4aeiaA8pDORNlk4VhpfnP4tiRyViaZh_icWIynVMbhLWYJjTBrDFY4RB/exec" name="contact-form">
       <h4>Contact Us</h4>
       <input type="text" name="your-name" placeholder="Name">
-      <input type="text" name="your-number" placeholder="Number">
-      <input type="email" name="your-email" placeholder="Email">
+      <input type="number" name="your-number" placeholder="Number">
+      <input type="password" name="your-email" placeholder="Email">
       <textarea name="message" rows="7" placeholder="Your Message">
       </textarea>
       <input type="submit" value="Submit" id="submit">
