--- a/index.html
+++ b/index.html
@@ -102,6 +102,32 @@
     .create-account:hover {
       background-color: #36a420;
     }
+    /* Responsive design */
+    @media (max-width: 480px) {
+      .logo {
+        font-size: 1.8rem;
+        margin-bottom: 15px;
+      }
+
+      input {
+        padding: 10px;
+        font-size: 0.9rem;
+      }
+
+      button {
+        padding: 10px;
+        font-size: 0.9rem;
+      }
+
+      .forgot-password {
+        font-size: 0.8rem;
+      }
+
+      .create-account {
+        padding: 8px;
+        font-size: 0.9rem;
+      }
+    }
   </style>
 </head>
 <body>
